--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "latest",
+    "next-redux-logger": "^1.0.15",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.8",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.2.1"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
